add style sheet to header in eda1.html

--- a/unit1_projects/eda1.html
+++ b/unit1_projects/eda1.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>eda1</title>
+		<link rel="stylesheet" type="text/css" href="stylesheets/eda1.css">
 	</head>
 	<body>
 		<div>
@@ -13,9 +14,9 @@
 			<h6>Header 6</h6>
 		</div>
 		<div>
-			<p><i>This is the italic. </i>This is the paragraph 1 just short description.</p>
-			<p><b>This is the bold text. </b>This is the paragraph 2 just short description.</p>
-			<p>This is the paragraph 3 just short description.</p>
+			<p id='p1'><i>This is the italic. </i>This is the paragraph 1 just short description.</p>
+			<p id='p_red'><b>This is the bold text. </b>This is the paragraph 2 just short description.</p>
+			<p class='p_blue'>This is the paragraph 3 just short description.</p>
 		</div>
 		<div>
 			<a href="link1.html">Link 1</a>
