add style sheet to header in eda2.html

--- a/unit1_projects/eda2.html
+++ b/unit1_projects/eda2.html
@@ -8,8 +8,17 @@
 		<div class="wrap">
 			<div class='header'>header</div>
 			<div class='body'>
-				<div class='content-left'>content area left</div>
-				<div class='content-right'>content area right</div>
+				<div id='sidebar'>
+					<ul>
+						<li><a href="link1.html">Link one</a></li>
+						<li><a href="link2.html">Link two</a></li>
+						<li><a href="link3.html">Link three</a></li>
+					</ul>
+				</div>
+				<div id='sidecontent'>
+					<div class='content-left'>content area left</div>
+					<div class='content-right'>content area right</div>
+				</div>
 			</div>
 			<div class='footer'>footer</div>
 		</div>
