The new file of link3.html and more style

--- a/unit1_projects/link1.html
+++ b/unit1_projects/link1.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>Link 1</title>
+		<title>Week 1</title>
+		<link rel="stylesheet" type="text/css" href="stylesheets/eda2.css">
 	</head>
 	<body>
-		<div>
-			<p>Hello world for link 1</p>
+		<div class="wrap">
+			<div class='header'><h3>Welcome to Heading 3</h3></div>
+			<div class='body'>
+				<div id='sidebar'>
+					<ul class="left-menu">
+						<li><a href="link1.html">Link one</a></li>
+						<li><a href="link2.html">Link two</a></li>
+						<li><a href="link3.html">Link three</a></li>
+					</ul>
+				</div>
+				<div id='sidecontent'>
+					<div>
+						<h3>Welcome to new page.</h3>
+						<p>Hello, this is the link 1 page.</p>
+					</div>
+				</div>
+				<div class='clear'></div>
+			</div>
+			<div class='footer'>footer</div>
 		</div>
 	</body>
 </html>
