--- a/unit1_projects/link3.html
+++ b/unit1_projects/link3.html
@@ -16,8 +16,11 @@
 					</ul>
 				</div>
 				<div id='sidecontent'>
-					<div class='content-left'>content area left</div>
-					<div class='content-right'>content area right</div>
+					<div>
+						<h3>Welcome to new page.</h3>
+						<p>Hello, this is the link 3 page.</p>
+						<p>Welcome for the link page new and it will show you with some content</p>
+					</div>
 				</div>
 				<div class='clear'></div>
 			</div>
