--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello World</title>
+		<title>eda1</title>
+		<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/eda1.css">
 	</head>
 	<body>
 		<div>
-			<ul>
-				<li>Home</li>
-				<li>Products</li>
-				<li>Services</li>
+			<h4>Welcome to my website!</h4>
+		</div>
+		<div>
+			<p id='p1'><i>This is the italic. </i>This is the paragraph 1 just short description.</p>
+			<p id='p_red'><b>This is the bold text. </b>This is the paragraph 2 just short description.</p>
+			<p class='p_blue'>This is the paragraph 3 just short description.</p>
+		</div>
+		<div>
+			<ul class="left-menu">
+				<li><a href="blog-posts/week1_technical.html">My Blog Posts</a></li>
+				<li><a href="link1.html">Link 1</a></li>
+				<li><a href="link2.html" tagert="_blank">Link 2 in new windows</a></li>
+				<li><a href="mailto:chhingchhing.hem@gmail.com">Link to my email address.</a></li>
 			</ul>
 		</div>
-	</body>
 
+	</body>
 </html>
