--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -2,27 +2,52 @@
 <html lang="en">
 	<head>
 		<title>Week 1</title>
-		<link rel="stylesheet" type="text/css" href="stylesheets/week1_blog.css">
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	</head>
 	<body>
 		<div class="wrap">
-			<div class='header'><h3>My Blog for week 1</h3></div>
+			<div class='header'><h3>Welcome to my blog sport</h3></div>
 			<div class='body'>
-				<div id='sidebar'>
-					<ul class="left-menu">
-						<li><a href="link1.html">Link one</a></li>
-						<li><a href="link2.html">Link two</a></li>
-						<li><a href="link3.html">Link three</a></li>
-					</ul>
-				</div>
-				<div id='sidecontent'>
-					<div>
-						<p>Hellow	</p>
+				<div>
+					<h4><a href="http://www.w3schools.com/">Site 1: w3schools.com</a></h4>
+					<div class='img-site'>
+						<img src="images/w3schools.PNG">
 					</div>
+					<div class='describe-site'>
+						<p>W3schools.com is a website that provides you the basic and advance concept of programming. W3school.com provides you the definition of each points, example of code and it also lets you to practice by using your coding</p>
+						<p>When I open this website, the first point that I look at first is the top of the page, it is a header of this web page. This website is easy to understand just looking at the header, you will know clearly about the content of this website, because it shows you the short description of the whole website.</p>
+						<p>This website is really pretty, but simple. I meant it is not dark, and clearly content. For mixing the color it also great, it content well-prepared for position. Moreover, it is easy for navigate of each pages. Furthermore, it also consists with definition, example of code and practice, so it can help you for improving on your knowledge.</p>
+						<p>Please enjoy it!</p>
+					</div>
+					<div class='clear'></div>
 				</div>
-				<div class='clear'></div>
+				<div>
+					<h4><a href="http://tec-today.com">Site 2: Technology Today</a></h4>
+					<div class='img-site'>
+						<img src="images/tech-today.PNG">
+					</div>
+					<div class='describe-site'>
+						<p>Technology Today is a website that talks about technologies which we want to know and we want to study for today. It really interested website because it contains the technologies that new things and it useful for who is studying or working on IT skill. They can go throw this website to know more about any technologies.</p>
+						<p>Now I would like to a short description of it. It's appearance is not bad because the contents are not messy, and it makes to easy for navigating the content of each tip of blog. For mixing of color also looking good. When you scroll down, you will see the three of blogs of content. It make you easy to understand which blog is talking about.</p>
+						<p>But during the good points that I see, it also has some lack points that I would like to improve more, such as when you click on "More" button, it will redirect you to a new page what content the relavent text to your previous topic you have linked. For this content, I would like to put more the spacing of each blog of contents and images. One more thing, the title of the main content, I would like to put spacing on the top of it, please move it to up down just a bit move down. For the font size, I think should be bigger than this, it makes easy to viewer for reading and enjoy with their reading.</p>
+					</div>
+					<div class='clear'></div>
+				</div>
+				<div>
+					<h4><a href="http://tw1.php.net">Site 2: php.net</a></h4>
+					<div class='img-site'>
+						<img src="images/php.net.PNG">
+					</div>
+					<div class='describe-site'>
+						<p> </p>
+						<p>PHP.net website is also good but I do not like the some paths of it. When the first time that I opened this webpage, I was really missunderstanding, because I cound not find the point that I needed. I would like to see the definition, example or practice. If I look at the mixing the color, it is complex of mixing. Background of it so dark and for the color of text has the color is not match with the background dark. When I read this webpage, I have feeling a bit bored with that color of background and text. But it also has many good paths that I need to learn from it.</p>
+						<p>If I talk about the good points, it also has good paths as well. There are many points which mad me interested on this website as well. These good points such as well-prepared of positioning. If we look to background of the whole body and background of the content, it is good because this website seperated clearly with the content and background of body. It also easy to read for the content because it has a white background the forceground of the text is black.</p>
+						<p>Please enjoy it!</p>
+					</div>
+					<div class='clear'></div>
+				</div>
 			</div>
-			<div class='footer'>footer</div>
+			<div class='footer'>Prepared by Testing</div>
 		</div>
 	</body>
 </html>
