Wireframe_sites.html editing and added new images of each websites

--- a/unit1_projects/wireframe_sites.html
+++ b/unit1_projects/wireframe_sites.html
@@ -18,15 +18,27 @@
 				<div id='sidecontent'>
 					<div>
 						<h4><a href="http://www.w3schools.com/">Site 1: w3schools.com</a></h4>
-						<p>This website can solves in many problems that students and web developers meet as everyday. It helps the solve for wondering of students who would like to know about technologies. When you read on this website, you will improve on your knowledge and your skill. Moreover, you can extend more on more technologies both basic and advance lavel such as PHP, Javascript, HTML, JQuery, SQL, and CSS. Furthermore, you also can know exactly about definition of each keywords that you might be spend sometime for reading it.</p>
+						<div class='img-site'><img src="images/w3schools.png"></div>
+						<div class='describe-site'>
+							<p>This website can solves in many problems that students and web developers meet as everyday. It helps the solve for wondering of students who would like to know about technologies. When you read on this website, you will improve on your knowledge and your skill. Moreover, you can extend more on more technologies both basic and advance lavel such as PHP, Javascript, HTML, JQuery, SQL, and CSS. Furthermore, you also can know exactly about definition of each keywords that you might be spend sometime for reading it.</p>
+						</div>
+						<div class='clear'></div>
 					</div>
 					<div>
 						<h4><a href="http://tec-today.com/portal/">Site 2: Technology Today</a></h4>
-						<p>This website can solves some problems for you which you fact in your career life, if you are a web developer. It not also helps you for solve the problems in career but it helps students to extends their abilities of studying on technologies major. This website can brings the new information of new technologies which match with what you would like to learn or know more about it.</p>
+						<div class='img-site'><img src="images/tech-today.com.png"></div>
+						<div class='describe-site'>
+							<p>This website can solves some problems for you which you fact in your career life, if you are a web developer. It not also helps you for solve the problems in career but it helps students to extends their abilities of studying on technologies major. This website can brings the new information of new technologies which match with what you would like to learn or know more about it.</p>
+						</div>
+						<div class='clear'></div>
 					</div>
 					<div>
 						<h4><a href="http://www.php.net/">Site 3: PHP.net</a></h4>
-						<p>PHP.net is a website which allows you to access for knowing about PHP information and some documents that related to PHP. On this websie will shows you the detial of release version of PHP and it also allows you to download that release version when you clink on a link of download page.</p>
+						<div class='img-site'><img src="images/php.net.png"></div>
+						<div class='describe-site'>
+							<p>PHP.net is a website which allows you to access for knowing about PHP information and some documents that related to PHP. On this websie will shows you the detial of release version of PHP and it also allows you to download that release version when you clink on a link of download page.</p>
+						</div>
+						<div class='clear'></div>
 					</div>
 				</div>
 				<div class='clear'></div>
