Change link to each works on week1

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		</div>
 		<div>
 			<ul class="left-menu">
-				<li><a href="blog-posts/week1_technical.html">My Blog Posts</a></li>
-				<li><a href="link1.html">Link 1</a></li>
-				<li><a href="link2.html" tagert="_blank">Link 2 in new windows</a></li>
+				<li><a href="blog-posts/week1_technical.html" taget="_blank">My Blog Posts</a></li>
+				<li><a href="blog-posts/week1_technical.html" taget="_blank">Week1_technical</a></li>
+				<li><a href="unit1_projects/wireframe_sites.html" taget="_blank">Wireframe_sites</a></li>
 				<li><a href="mailto:chhingchhing.hem@gmail.com">Link to my email address.</a></li>
 			</ul>
 		</div>
