--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<ul class="left-menu">
 				<li><a href="blog-posts/week1_technical.html" taget="_blank">Week1_technical</a></li>
 				<li><a href="unit1_projects/wireframe_sites.html" taget="_blank">Wireframe_sites</a></li>
+				<li><a href="blog-posts/week1_cultural.html" taget="_blank">Week1_cultural</a></li>
 				<li><a href="mailto:chhingchhing.hem@gmail.com">Link to my email address.</a></li>
 			</ul>
 		</div>
