custome on index.html of solo challenge

--- a/index.html
+++ b/index.html
@@ -1,26 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>eda1</title>
-		<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/eda1.css">
+		<title>Index My Wireframe</title>
+		<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/my_wireframe.css">
+		<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/index.css">
 	</head>
 	<body>
-		<div>
-			<h4>Welcome to my website!</h4>
+		<div class="wrap">
+			<div class='header-cultural'>
+				<h3>Welcome to my wireframe</h3>
+			</div>
+			<div class='body'>
+				<div id='h_eda'><h1 id='eda'><span>Wireframe</span></h1></div>
+				<div>
+					<div id='next_eda'>
+						<h4>About Me</h4>
+						<div class='p-cultural'>
+							<div class='p-describe'>
+								<div><img id='img-cultural' src="unit1_projects/images/Back-to-school-study-hard.jpg"></div>
+								<p>
+									What that I cannot forget when I have learned with EDA for the week 1 is that I really enjoy with CSS and HTML because they are the things that I work for everyday. But the thing that I really cannot forget it is that I cannot do the practice as perfect with these technologies, although I am a developer.
+								</p>
+							</div>
+							<div class='img-describe'>
+								<p>
+									What that I cannot forget when I have learned with EDA for the week 1 is that I really enjoy with CSS and HTML because they are the things that I work for everyday. But the thing that I really cannot forget it is that I cannot do the practice as perfect with these technologies, although I am a developer.
+								</p>
+							</div>
+						</div>
+						<div class='clear'></div>
+					</div>
+					<div class='nav'>
+						<ul class="left-menu">
+							<li><a href="blog-posts/week1_technical.html" taget="_blank">Week1_technical</a></li>
+							<li><a href="unit1_projects/wireframe_sites.html" taget="_blank">Wireframe_sites</a></li>
+							<li><a href="blog-posts/week1_cultural.html" taget="_blank">Week1_cultural</a></li>
+						</ul>
+					</div>
+					<div class='clear'></div>
+				</div>
+				<div id='after_eda'>
+					<h4>About Wireframe</h4>
+					<div class='p-cultural'>
+						<div class='p-describe'>
+							<p>
+								After I took the time to learn with EDA and I have learned more from EDA, I'm really proud of the EDA because this program really useful for basic programmer who need to improve on their skill. EDA can improve people who work closely with it to be high commitment, strong motivation, and they would like to learn that session by their passion. I am also like this as well, although I have some problem with understanding the objective of the each topic, but I am really have high commitment for learning about it. 
+							</p>
+							<p>
+								What that I cannot forget when I have learned with EDA for the week 1 is that I really enjoy with CSS and HTML because they are the things that I work for everyday. But the thing that I really cannot forget it is that I cannot do the practice as perfect with these technologies, although I am a developer.
+							</p>
+						</div>
+					</div>
+					<div class='img-describe'><img class='img-cultural' src="unit1_projects/images/balsamiq.png"></div>
+					<div class='clear'></div>
+				</div>
+				<div class='img-describe'><img class='img-cultural' src="unit1_projects/images/my_wireframe.png"></div>
+			</div>
+			<div class='footer'>Prepared by Testing</div>
 		</div>
-		<div>
-			<p id='p1'><i>This is the italic. </i>This is the paragraph 1 just short description.</p>
-			<p id='p_red'><b>This is the bold text. </b>This is the paragraph 2 just short description.</p>
-			<p class='p_blue'>This is the paragraph 3 just short description.</p>
-		</div>
-		<div>
-			<ul class="left-menu">
-				<li><a href="blog-posts/week1_technical.html" taget="_blank">Week1_technical</a></li>
-				<li><a href="unit1_projects/wireframe_sites.html" taget="_blank">Wireframe_sites</a></li>
-				<li><a href="blog-posts/week1_cultural.html" taget="_blank">Week1_cultural</a></li>
-				<li><a href="mailto:chhingchhing.hem@gmail.com">Link to my email address.</a></li>
-			</ul>
-		</div>
-
 	</body>
 </html>
