--- a/unit1_projects/my_wireframe.html
+++ b/unit1_projects/my_wireframe.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>My Wireframe</title>
+		<title>Index My Wireframe</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/my_wireframe.css">
+		<link rel="stylesheet" type="text/css" href="stylesheets/index.css">
 	</head>
 	<body>
 		<div class="wrap">
@@ -11,20 +12,30 @@
 			</div>
 			<div class='body'>
 				<div id='h_eda'><h1 id='eda'><span>Wireframe</span></h1></div>
-				<div id='after_eda'>
-					<h4>About Me</h4>
-					<div class='p-cultural'>
-						<div class='p-describe'>
-							<div><img class='img-cultural' src="images/Back-to-school-study-hard.jpg"></div>
-							<p>
-								What that I cannot forget when I have learned with EDA for the week 1 is that I really enjoy with CSS and HTML because they are the things that I work for everyday. But the thing that I really cannot forget it is that I cannot do the practice as perfect with these technologies, although I am a developer.
-							</p>
+				<div>
+					<div id='next_eda'>
+						<h4>About Me</h4>
+						<div class='p-cultural'>
+							<div class='p-describe'>
+								<div><img id='img-cultural' src="images/Back-to-school-study-hard.jpg"></div>
+								<p>
+									What that I cannot forget when I have learned with EDA for the week 1 is that I really enjoy with CSS and HTML because they are the things that I work for everyday. But the thing that I really cannot forget it is that I cannot do the practice as perfect with these technologies, although I am a developer.
+								</p>
+							</div>
+							<div class='img-describe'>
+								<p>
+									What that I cannot forget when I have learned with EDA for the week 1 is that I really enjoy with CSS and HTML because they are the things that I work for everyday. But the thing that I really cannot forget it is that I cannot do the practice as perfect with these technologies, although I am a developer.
+								</p>
+							</div>
 						</div>
-						<div class='img-describe'>
-							<p>
-								What that I cannot forget when I have learned with EDA for the week 1 is that I really enjoy with CSS and HTML because they are the things that I work for everyday. But the thing that I really cannot forget it is that I cannot do the practice as perfect with these technologies, although I am a developer.
-							</p>
-						</div>
+						<div class='clear'></div>
+					</div>
+					<div class='nav'>
+						<ul class="left-menu">
+							<li><a href="../blog-posts/week1_technical.html" taget="_blank">Week1_technical</a></li>
+							<li><a href="wireframe_sites.html" taget="_blank">Wireframe_sites</a></li>
+							<li><a href="../blog-posts/week1_cultural.html" taget="_blank">Week1_cultural</a></li>
+						</ul>
 					</div>
 					<div class='clear'></div>
 				</div>
