--- a/blog-posts/week2_technical.html
+++ b/blog-posts/week2_technical.html
@@ -10,6 +10,14 @@
 			<div class='header-cultural'><h3>Welcome to Week2 Technical</h3></div>
 			<div class='body'>
 				<div>
+					<h4>Topic choosen</h4>
+					<fieldset id='topic'>
+						<legend><h4 class='h4-fieldset'>What does it mean to display inline vs inline blocks?</h4></legend>
+						<p><b>Display Inline: </b>It means that takes up only as much width as it needs, and done not force new lines. An inline element has no line break before or after it, and it tolerates HTML element next to it.</p>
+						<p><b>Display Block: </b>It means that takes up the full width avaliable, with a new line before and after. A block-display element will span the full width of the space avaliable to it, and so will start on a new line in the flow of HTML. The flow will continue on a new line after the block-display element. A block element has some whitespace above and below it and deos not tolerate any HTML element next to it.</p>
+					</fieldset>
+				</div>
+				<div>
 					<h4>Chrome Dev Tools</h4>
 					<h3>Change heigh of div header from 130px to 65px</h3>
 					<div class='img-site img-week2'>
