--- a/unit1_projects/eda1.html
+++ b/unit1_projects/eda1.html
@@ -6,12 +6,7 @@
 	</head>
 	<body>
 		<div>
-			<h1>Header 1</h1>
-			<h2>Header 2</h2>
 			<h3>Header 3</h3>
-			<h4>Header 4</h4>
-			<h5>Header 5</h5>
-			<h6>Header 6</h6>
 		</div>
 		<div>
 			<p id='p1'><i>This is the italic. </i>This is the paragraph 1 just short description.</p>
@@ -19,9 +14,27 @@
 			<p class='p_blue'>This is the paragraph 3 just short description.</p>
 		</div>
 		<div>
-			<a href="link1.html">Link 1</a>
-			<a href="link2.html" tagert="_blank">Link 2 in new windows</a>
-			<a href="mailto:chhingchhing.hem@gmail.com">Link to my email address.</a>
+			<a href="link1.html" target="_blank">Link 1</a><br/>
+			<a href="link2.html" tagert="_blank">Link 2 in new windows</a><br/>
+			<a href="mailto:chhingchhing.hem@gmail.com">Link to my email address.</a><br/>
+		</div>
+
+		<div>
+			<img src="images/Back-to-school-study-hard.jpg" width="43%" />
+			<a href="images/Ruby_on_Rails.svg.png"><img src="images/Ruby_on_Rails.svg.png" width="25%" /></a>
+		</div>
+
+		<div>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<ol>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ol>
 		</div>
 
 	</body>
