[UPDATE] my_wireframe for week 2

--- a/unit1_projects/my_wireframe.html
+++ b/unit1_projects/my_wireframe.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<title>Index My Wireframe</title>
-		<link rel="stylesheet" type="text/css" href="stylesheets/my_wireframe.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/index.css">
+		<link rel="stylesheet" type="text/css" href="stylesheets/my_wireframe.css">
 	</head>
 	<body>
 		<div class="wrap">
@@ -12,7 +12,7 @@
 			</div>
 			<div class='body'>
 				<div id='h_eda'><h1 id='eda'><span>Wireframe</span></h1></div>
-				<div>
+				<div class="second_2">
 					<div id='next_eda'>
 						<h4>About Me</h4>
 						<div class='p-cultural'>
@@ -33,8 +33,9 @@
 					<div class='nav'>
 						<ul class="left-menu">
 							<li><a href="../blog-posts/week1_technical.html" taget="_blank">Week1_technical</a></li>
-							<li><a href="wireframe_sites.html" taget="_blank">Wireframe_sites</a></li>
-							<li><a href="../blog-posts/week1_cultural.html" taget="_blank">Week1_cultural</a></li>
+							<li><a href="my_wireframe.html" taget="_blank">My_wireframe</a></li>
+							<!-- <li><a href="wireframe_sites.html" taget="_blank">Wireframe_sites</a></li>
+							<li><a href="../blog-posts/week1_cultural.html" taget="_blank">Week1_cultural</a></li> -->
 						</ul>
 					</div>
 					<div class='clear'></div>
