--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 						<ul class="left-menu">
 							<li><a href="blog-posts/week1_technical.html" taget="_blank">Week1_technical</a></li>
 							<li><a href="unit1_projects/my_wireframe.html" taget="_blank">My_wireframe</a></li>
-							<!-- <li><a href="blog-posts/week2_technical.html" taget="_blank">Week2_technical</a></li>
-							<li><a href="unit1_projects/wireframe_sites.html" taget="_blank">Wireframe_sites</a></li>
+							<li><a href="blog-posts/week2_technical.html" taget="_blank">Week2_technical</a></li>
+							<!-- <li><a href="unit1_projects/wireframe_sites.html" taget="_blank">Wireframe_sites</a></li>
 							<li><a href="blog-posts/week1_cultural.html" taget="_blank">Week1_cultural</a></li>
 							<li><a href="blog-posts/week2_8_gps1_1.html" taget="_blank">week2_8_gps1_1</a></li> -->
 						</ul>
